# PRIMoRDiA_aux

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  gms_data  lqqcmmtools  lqqcmmtools.dia
include/: GRO.h  Line.h  MDprep.h  PDB.h  QCPinput.h  XYZ.h  atom.h  gamessInput.h  geometry.h  global.h  interface.h  molecule.h  mopacInput.cpp  mopacInput.h  orcaInput.h  pDynamo_Output.h  pdbAtom.h  pdbModel.h  read_traj.h  residue.h  system.h  traj_analysis.h  traj_script.h  unit_test.h
python_scripts/: NEB.py  pDynamo_generic.py  scan.py  umbrella_sampling.py
python_scripts/pDynamo_tests/: TIM_qcmm_opt.pkl
src/: GRO.cpp  Line.cpp  MDprep.cpp  PDB.cpp  QCPinput.cpp  QCinput.cpp  XYZ.cpp  atom.cpp  gamessInput.cpp  geometry.cpp  global.cpp  interface.cpp  main.cpp  molecule.cpp  mopacInput.cpp  orcaInput.cpp  pdbAtom.cpp  pdbModel.cpp  read_traj.cpp  read_traj.h  residue.cpp  system.cpp  traj_analysis.cpp  traj_script.cpp  unit_test.cpp
test_data/: scan1d.dcd
