cmake_minimum_required (VERSION 3.0)
set(CMAKE_CXX_COMPILER /usr/bin/g++)
project (primordia_aux)
enable_language (CXX)
include_directories (./include)
file (GLOB SOURCES "src/*.cpp")
add_executable(primordia_aux ${SOURCES})
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}  -O3  -lchemfiles -std=c++17 -lstdc++fs ")
target_link_libraries(primordia_aux -lstdc++fs -lchemfiles)
