cmake_minimum_required (VERSION 3.0)
set(CMAKE_CXX_COMPILER /usr/bin/g++)
project (primordia_aux)
enable_language (CXX)
include_directories (./include)
file (GLOB SOURCES "src/*.cpp")
add_executable(primordia_aux ${SOURCES})
set (CMAKE_BUILD_TYPE Release)
set (CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS} -fopenmp -O3  -std=c++17 -lstdc++fs -lchemfiles")
set (CMAKE_CXX_FLAGS_DEBUG "-pg -g -O0 -fopenmp -std=c++17 -lchemfiles")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}  -O3 -fopenmp  -lchemfiles -std=c++17 -lstdc++fs ")
target_link_libraries(primordia_aux -lstdc++fs -lchemfiles )
